--- a/application/bdi/css/base.css
+++ b/application/bdi/css/base.css
@@ -1,4 +1,6 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,700);@import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700);@import url(http://fonts.googleapis.com/css?family=Oswald:400,700);/*
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700);
+@import url(http://fonts.googleapis.com/css?family=Oswald:400,700);/*
  * Bootstrap v2.2.1
  *
  * Copyright 2012 Twitter, Inc
