--- a/application/bdi/css/style_self.css
+++ b/application/bdi/css/style_self.css
@@ -11,5 +11,6 @@ Website: http://sfandrianah.pe.hu
 .self-border-white{
 border: 1px solid white;
 padding-left:10px;
+padding-right:10px;
 padding-top:10px;
 }
